hphp/test/zend/good/Zend/tests/generators/throw_not_an_exception.php.expectf

Fatal error: Exceptions must implement the Throwable interface. in %s/throw_not_an_exception.php on line 4
